--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "express": "^4.17.1",
-    "helmet": "^3.21.2"
+    "helmet": "^3.21.2",
+    "mysql2": "^2.0.2",
+    "sequelize": "^5.21.3"
   }
 }
