--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 services:
   app:
     build: .
@@ -11,8 +11,10 @@ services:
   mySql:
     image: mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=dev
+      - MYSQL_RANDOM_ROOT_PASSWORD=yes
       - MYSQL_DATABASE=skillcentral
+      - MYSQL_USER=devUser
+      - MYSQL_PASSWORD=password
     ports:
       - "3306:3306"
     volumes:
