--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,21 +1,28 @@
-version: '3.7'
+version: '3.1'
 services:
-  app:
-    build: .
-    ports:
-    - "3000:3000"
-    volumes:
-    - .:/usr/src/app
-    depends_on:
-      - "mySql"
+  # app:
+  #   build: .
+  #   ports:
+  #   - "3000:3000"
+  #   volumes:
+  #   - .:/usr/src/app
+  #   depends_on:
+  #     - "mySql"
   mySql:
     image: mysql
+    command: --default-authentication-plugin=mysql_native_password
     environment:
-      - MYSQL_DATABASE=skillcentral
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+      MYSQL_ROOT_PASSWORD: topsecret
+      MYSQL_DATABASE: skillcentral
     ports:
       - "3306:3306"
-    volumes:
-      - my-db:/var/lib/mysql
-volumes:
-  my-db:
+      - "33060:33060"
+    # volumes:
+    #   - my-db1:/var/lib/mysql
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8082:8080
+# volumes:
+#   my-db1:
