--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www.js"
+    "start": "node ./bin/www.js",
+    "docker-start": "docker-compose up -d",
+    "docker-stop": "docker-compose stop",
+    "docker-clean" : "npm run docker-stop && docker-compose rm -v"
   },
   "author": "prashant",
   "license": "ISC",
@@ -15,6 +18,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "mysql2": "^2.0.2",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1"
   }
 }
