created basic register, working on jwt and auth. will see if i can add passport to it

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -3,7 +3,7 @@
     "username": "root",
     "password": "topsecret",
     "database": "skillcentral",
-    "host": "mySql",
+    "host": "localhost",
     "dialect": "mysql",
     "operatorsAliases": false
   },
