--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "prashant",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
