--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3.1'
 services:
-  # app:
-  #   build: .
-  #   ports:
-  #   - "3000:3000"
-  #   volumes:
-  #   - .:/usr/src/app
-  #   depends_on:
-  #     - "mySql"
+  app:
+    build: .
+    ports:
+    - "3000:3000"
+    depends_on:
+      - "mySql"
   mySql:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
